--- a/index.html
+++ b/index.html
@@ -9,51 +9,63 @@
 <body>
     <div class="container">
         <h1>SPa ICT Hub's Basic Calculator</h1>
-        <div class="calculator_wrapper">
-            <div class="display_input">
-                <div class="upper-items">
-                    <div class="controls">
-                        <div class="control close">x</div>
-                        <div class="control minimize">-</div>
-                        <div class="control restore">+</div>
+        <div class="spa_basic">
+            <div class="calculator_wrapper">
+                <div class="display_input">
+                    <div class="upper-items">
+                        <div class="controls">
+                            <div class="control close">x</div>
+                            <div class="control minimize">-</div>
+                            <div class="control restore">+</div>
+                        </div>
+                        <div class="upper_value"></div>
                     </div>
-                    <div class="upper_value"></div>
+                    <div class="main_value"></div>
                 </div>
-                <div class="main_value">0</div>
+                <div class="buttons">
+                    <div class="numbers">
+                        <div class="row">
+                            <div class="button" data-value="7">7</div>
+                            <div class="button" data-value="8">8</div>
+                            <div class="button" data-value="9">9</div>
+                        </div>
+                        <div class="row">
+                            <div class="button" data-value="4">4</div>
+                            <div class="button" data-value="5">5</div>
+                            <div class="button" data-value="6">6</div>
+                        </div>
+                        <div class="row">
+                            <div class="button" data-value="1">1</div>
+                            <div class="button" data-value="2">2</div>
+                            <div class="button" data-value="3">3</div>
+                        </div>
+                        <div class="row">
+                            <div class="button" data-value="0">0</div>
+                            <div class="button dot_button" data-value=".">.</div>
+                            <div class="button equal_button">=</div>
+                        </div>
+                    </div>
+                    <div class="options">
+                        <div class="option" data-option="/">/</div>
+                        <div class="option" data-option="*">*</div>
+                        <div class="option" data-option="-">-</div>
+                        <div class="option" data-option="+">+</div>
+                    </div>
+                </div>
             </div>
-            <div class="buttons">
-                <div class="numbers">
-                    <div class="row">
-                        <div class="button" data-value="7">7</div>
-                        <div class="button" data-value="8">8</div>
-                        <div class="button" data-value="9">9</div>
-                    </div>
-                    <div class="row">
-                        <div class="button" data-value="4">4</div>
-                        <div class="button" data-value="5">5</div>
-                        <div class="button" data-value="6">6</div>
-                    </div>
-                    <div class="row">
-                        <div class="button" data-value="1">1</div>
-                        <div class="button" data-value="2">2</div>
-                        <div class="button" data-value="3">3</div>
-                    </div>
-                    <div class="row">
-                        <div class="button" data-value="0">0</div>
-                        <div class="button dot_button" data-value=".">.</div>
-                        <div class="button equal_button">=</div>
-                    </div>
+
+            <div class="calculator_wrapper_extension">
+                <div class="external_controls">
+                    <!-- clear screen -->
+                    <div class="switch off">ON</div>
+                    <div class="reset">C</div>
                 </div>
-                <div class="options">
-                    <div class="option" data-option="/">/</div>
-                    <div class="option" data-option="*">*</div>
-                    <div class="option" data-option="-">-</div>
-                    <div class="option" data-option="+">+</div>
-                </div>
+                <div class="extend_button"><span class="expand">&gtcc;</span></div>
             </div>
         </div>
     </div>
 
     <script src="index.js"></script>
+    <script src="extension.js"></script>
 </body>
 </html>
